[package]
name = "arm_gic"
version = "0.1.0"
edition = "2021"
authors = ["Yuekai Jia <equation618@gmail.com>"]
description = "ARM Generic Interrupt Controller (GIC) register definitions and basic operations"
license = "GPL-3.0-or-later OR Apache-2.0"
repository = "https://github.com/Starry-OS/arm_gic"
documentation = "https://starry-os.github.io/arm_gic/arm_gic/index.html"
keywords = ["Starry"]

[dependencies]
tock-registers = "0.8"
bitflags = "2.0"
cfg-if = "1.0"
aarch64-cpu = "9.3"
